# tap-geekbot

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  release.yaml  requirements.txt  test.yaml  test.yml
tap_geekbot/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: test_core.py
